@@ -1,3 +1,7 @@
+11 October 2023: George
+	- Fix #850: [FR] Ability to use specific database in Redis, with new
+	  redis-logical-db configuration option.
+
 10 October 2023: George
 	- Fix infinite loop when reading multiple lines of input on a broken
 	  remote control socket. Addesses #947 and #948.
